fixed scroll-to-top(visible on page load)(css display fix)

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ font-family: 'Ubuntu', sans-serif; */
 }
 
 .scroll-up-btn {
+  display: none;
   position: fixed;
   height: 45px;
   width: 42px;
